# MapMe_v2

./: .gitignore  CMakeLists.txt  README
doc/: Doxyfile
resources/db/fr/: battles.xml  capitals.xml  cities.xml  countries.xml
resources/i18n/: README  mapme.pot
resources/i18n/fr/: fr.po
resources/shaders/: blur.sfx  colorize.sfx
src/: cmake_options.h.in  colors.h  debug.cpp  debug.h  elements.cpp  elements.h  gui.cpp  gui.h  locations.cpp  locations.h  main.cpp  main.h  menu.cpp  menu.h  notification.cpp  notification.h  options.h  options.h.in  parser.cpp  parser.h  screenGame.cpp  screenGame.h  screenMenu.cpp  screenMenu.h  timer.cpp  timer.h  typedef.h  utils.cpp  utils.h
src/managers/: ConfigurationManager.cpp  ConfigurationManager.hpp  NotificationManager.cpp  NotificationManager.hpp  ScreenManager.hpp  Singleton.hpp
